--- a/app/src/main/res/layout/fragment_podcast_details.xml
+++ b/app/src/main/res/layout/fragment_podcast_details.xml
@@ -1,56 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/headerView"
+    <com.thelumiereguy.neumorphicview.views.NeumorphicConstraintLayout
+        android:id="@+id/neu_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#eeeeee"
-        android:maxHeight="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <ImageView
-            android:id="@+id/feedImageView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@android:drawable/ic_menu_report_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-            android:id="@+id/feedTitleTextView"
-            android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:enable_preview="true"
+        android:layout_height="wrap_content">
+
+        <com.thelumiereguy.neumorphicview.views.NeumorphicCardView
+            android:id="@+id/neumorphicCardView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:maxHeight="100dp"
-            android:text=""
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/feedImageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/feedImageView"
-            app:layout_constraintTop_toTopOf="@+id/feedImageView"/>
-        <TextView
-            android:id="@+id/feedDescTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:maxHeight="100dp"
-            android:paddingBottom="8dp"
-            android:scrollbars="vertical"
-            android:text=""
-            app:layout_constraintEnd_toEndOf="parent"
+            android:minHeight="160dp"
+            android:background="@color/neu_card_background"
+            android:padding="24dp"
+            app:cardRadius="72"
+            app:shadowRadius="8dp"
+            app:highlightRadius="12dp"
+            app:enableHighlight="true"
+            app:enableShadow="true"
+            app:highlightDx="4dp"
+            app:highlightDy="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/feedImageView"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:neu_backgroundColor="@color/neu_card_background_color"
+            app:shadowColor="@color/neu_shadow_color"
+            app:highlightColor="@color/neu_highlight_color"
+            app:shadowDx="-4dp"
+            app:shadowDy="-4dp"
+          >
+
+            <com.thelumiereguy.neumorphicview.views.NeumorphicConstraintLayout
+                android:id="@+id/headerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/feedImageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="8dp"
+                    android:maxHeight="500dp"
+                    android:src="@android:drawable/ic_menu_report_image"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/feedTitleTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:maxHeight="100dp"
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/feedDescTextView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/feedImageView"/>
+                <TextView
+                    android:id="@+id/feedDescTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:paddingHorizontal="8dp"
+                    android:layout_marginTop="4dp"
+                    android:maxHeight="100dp"
+                    android:paddingBottom="8dp"
+                    android:textAlignment="center"
+                    android:scrollbars="vertical"
+                    android:text=""
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/feedTitleTextView"/>
+            </com.thelumiereguy.neumorphicview.views.NeumorphicConstraintLayout>
+
+
+        </com.thelumiereguy.neumorphicview.views.NeumorphicCardView>
+
+    </com.thelumiereguy.neumorphicview.views.NeumorphicConstraintLayout>
+
+
+
+
+
+
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/episodeRecyclerView"
@@ -61,6 +109,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerView"/>
+        app:layout_constraintTop_toBottomOf="@+id/neu_container"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
