--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="orange">#FD6A01</color>
+    <color name="orangeDark">#FF5722</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="neu_shadow_color">#FFF</color>
+    <color name="neu_highlight_color">#92B5D6</color>
+    <color name="neu_card_background">#202427</color>
+    <color name="neu_card_background_color">#E5F1FB</color>
+
+    <color name="surface_neu">#E1F0F8</color>
+    <color name ="action_bar_color">#5F98BB</color>
+
+    <color name="green_test">#2E9707</color>
+
+    <!--bi neu color-->
+
+
+    <color name="bi_neu_shadow_color">#FFF</color>
+    <color name="bi_neu_highlight_color">#92B5D6</color>
+    <color name="bi_neu_card_background">#202427</color>
+    <color name="bi_neu_card_background_color">#E5F1FB</color>
+
+    <color name="bi_surface_neu">#D5D6D8</color>
+    <color name="bi_secondary">#2BA1BB</color>
+
+
+
+
+    <color name="colorPrimary">#D5D6D7</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="colorSecondary">#00BCD4</color>
+
+    <color name="lightColor">#DAFFFFFF</color>
+
+    <color name="textColorPrimary">#212121</color>
+    <color name="textColorSecondary">#c4747474</color>
+
+
+
+
+
+
+
+
+
 </resources>
