--- a/app/src/main/res/layout/episode_item.xml
+++ b/app/src/main/res/layout/episode_item.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="top"
         android:layout_marginEnd="0dp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,7 @@
         android:layout_gravity="top"
         android:layout_marginTop="4dp"
         android:maxLines="3"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleView"
