--- a/app/src/main/res/layout/fragment_episode_player.xml
+++ b/app/src/main/res/layout/fragment_episode_player.xml
@@ -27,28 +27,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/episodeImageView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@android:drawable/ic_menu_report_image"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/episode_image_card"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_marginTop="16dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="6dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/episode_thumbnail" />
+            >
+
+            <ImageView
+                android:id="@+id/episodeImageView"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:contentDescription="@string/episode_thumbnail"
+                android:src="@android:drawable/ic_menu_report_image"
+                />
+
+
+        </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
 
         <TextView
             android:id="@+id/episodeTitleTextView"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:paddingVertical="8dp"
             android:text=""
-            app:layout_constraintBottom_toBottomOf="@+id/episodeImageView"
+            tools:text="Hello World"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/episodeImageView"
-            app:layout_constraintTop_toTopOf="@+id/episodeImageView"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/episode_image_card"
+
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -59,6 +85,7 @@
         android:background="@android:color/white"
         android:padding="8dp"
         android:scrollbars="vertical"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/playerControls"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +109,7 @@
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_replay_10_white"
+            android:src="@drawable/ic_baseline_replay_10_24"
             app:layout_constraintEnd_toStartOf="@+id/playToggleButton"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/replay_button" />
@@ -107,7 +134,7 @@
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_forward_30_white"
+            android:src="@drawable/ic_baseline_forward_30_24"
             app:layout_constraintStart_toEndOf="@+id/playToggleButton"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/skip_forward" />
