--- a/app/src/main/res/layout/fragment_podcast_details.xml
+++ b/app/src/main/res/layout/fragment_podcast_details.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerView"
@@ -13,54 +14,100 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/feedImageCard"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:cardCornerRadius="6dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:elevation="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+
         <ImageView
             android:id="@+id/feedImageView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@android:drawable/ic_menu_report_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            tools:src="@drawable/ic_baseline_looks_one_24"
+            />
+
+        </androidx.cardview.widget.CardView>
+
+
+
+
         <TextView
             android:id="@+id/feedTitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:maxHeight="100dp"
             android:text=""
-            android:textSize="14sp"
+            tools:text="Hello World Podcast"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/feedImageView"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@id/subscribe_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/feedImageView"
-            app:layout_constraintTop_toTopOf="@+id/feedImageView"/>
+            app:layout_constraintStart_toEndOf="@+id/feedImageCard"
+            app:layout_constraintTop_toTopOf="@+id/feedImageCard"/>
         <TextView
             android:id="@+id/feedDescTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="22dp"
             android:maxHeight="100dp"
             android:paddingBottom="8dp"
             android:scrollbars="vertical"
+            android:textColor="@color/black"
             android:text=""
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/feedImageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/feedImageCard"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/subscribe_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/subscribe"
+            android:paddingHorizontal="22dp"
+            app:layout_constraintBottom_toBottomOf="@+id/feedImageCard"
+            app:layout_constraintStart_toStartOf="@id/feedTitleTextView"
+            app:layout_constraintTop_toBottomOf="@id/feedTitleTextView"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/episode_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/episodes_header"
+        android:textSize="16sp"
+        android:paddingVertical="16dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/headerView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="16dp"
+
+        />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/episodeRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerView"/>
+        app:layout_constraintTop_toBottomOf="@+id/episode_header"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
