--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="dark_orange">#EF4708</color>
+    <color name="main_orange">#FE5001</color>
+    <color name="background_grey">#F2F2F2</color>
+
+
+
+
 </resources>
